test/e2e/filters/metrics/envoy.yaml
stats_config:
  stats_tags:
    - tag_name: host
      regex: '(_host=([a-z0-9-\.]+)[:\d]*)'
    - tag_name: method
      regex: "(_method=([a-zA-Z]+))"
    - tag_name: response_code
      regex: "(_response_code=([0-9]+))"
    - tag_name: upstream_name
      regex: '(_upstream_name=([a-zA-Z0-9-_\/]+)_route_name)'
    - tag_name: route_name
      regex: '(_route_name=([a-zA-Z0-9-_\/]+))'
    - tag_name: header_value
      regex: "(_header_value=([a-zA-Z0-9]+))"
    - tag_name: reporter
      regex: "(_reporter=([a-zA-Z]+))"

admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8000

static_resources:
  listeners:
    - name: main
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 10000
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                codec_type: auto
                http_filters:
                  - name: envoy.filters.http.golang
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.golang.v3alpha.Config
                      library_id: mymetrics
                      library_path: "/filter.so"
                      plugin_name: mymetrics
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ["*"]
                      routes:
                        - name: httpbin
                          match:
                            prefix: "/get"
                          route:
                            cluster: httpbin
                        - name: index-route
                          match:
                            prefix: "/"
                          direct_response:
                            status: 200
                            body:
                              inline_string: "Request received"

  clusters:
    - name: httpbin
      connect_timeout: 5000s
      type: strict_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: httpbin
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: httpbin.org
                      port_value: 80
